--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3516,7 +3516,7 @@ input, select, textarea {
 
 	#sidebar {
 		padding: 2.5em 2.5em 0.5em 2.5em ;
-		background: #312450;
+		background: #4b1c4f;
 		cursor: default;
 		height: 100vh;
 		left: 0;
@@ -3866,7 +3866,7 @@ input, select, textarea {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/OCW_Cathedral_bw.jpg");
+		background-image: url("images/background.png");
 		/*background-image: url("images/intro.svg");*/
 		background-position: top right;
 		background-repeat: no-repeat;
